# django-treenode

./: .flake8  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  create-release.yml  django-unit.yml  openssf-scorecard.yml  pythonpackage.yml  test-package.yml
tests/: models.py  settings.py  test_admin.py  test_fixtures.py  test_metadata.py  test_models.py  test_parents.py  test_performance.py  test_save_optimization.py  test_signals.py  test_utils.py  test_version.py  tests.py
tests/fixtures/: test_fixtures_issue_0088.json
treenode/: __init__.py  admin.py  cache.py  compat.py  debug.py  exceptions.py  forms.py  memory.py  metadata.py  models.py  signals.py  utils.py  version.py
treenode/locale/en/LC_MESSAGES/: django.po
treenode/locale/it/LC_MESSAGES/: django.po
treenode/static/treenode/css/: treenode.css
treenode/static/treenode/js/: treenode.js
